Fixed scramble display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -680,10 +680,9 @@ input[type="range"]::-webkit-slider-thumb {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: transparent;
   padding: 10px;
   border-radius: 8px;
-  box-shadow: 0 2px 10px rgb(0, 0, 0);
   z-index: 10;
 }
 
